bg size + alignment fix

--- a/themes/mlk/scss/imports/_hero.scss
+++ b/themes/mlk/scss/imports/_hero.scss
@@ -4,7 +4,6 @@
 	background-color: white;
 	background-repeat: no-repeat;
 	background-position: 40% 0;
-	background-size: 130%;
 
 	.overlay-container{
 		background: rgba(255, 255, 255, 0.47);
